<resources>
    <string name="app_name">Schedify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_plus_text">+</string>
    <string name="home_fragment_btn">Home Fragment</string>
    <string name="profile_fragment_btn">Profile Fragment</string>
    <string name="settings_fragment_btn">Settings Fragment</string>
    <string name="create_page_title_hint">Enter Title</string>
    <string name="create_page_title_desc">Enter Description (optional)</string>
    <string name="create_page_save_btn">Save</string>
    <string name="create_fragment_plus">+</string>
    <string name="create_fragment_create_text">Create</string>
    <string name="date_set_text">Start</string>
    <string name="time_set_text">End</string>
    <string name="location_set_text">Enter Location</string>
    <string name="delete_content_desc">Deletes Tasks</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="title">Title</string>
    <string name="course_details">Course Details</string>
    <string name="start_time">Start Time</string>
    <string name="due_time">End Time</string>
    <string name="start_due_time">Start Time - End Time</string>
    <string name="start_due_date">Start Date - End Date</string>
    <string name="location_text">Location</string>
    <string name="label_login">Login</string>
    <string name="btn_logout">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_here">Login_here</string>
    <string name="login_Here">login Here</string>
    <string name="Login_here">Login_Here</string>
    <string name="welcome">Welcome</string>
    <string name="Login_Here">Login Here</string>
</resources>