<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity"
    >

    <Button
        android:id="@+id/return_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="640dp"
        android:text="@string/app_name"
        android:textColor="#00000000"
        android:background="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="314dp"
        android:layout_height="283dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/border_box"
        android:gravity="top|start"
        android:hint="@string/create_page_title_desc"
        android:textColorHint="#6B6969"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/title_input"
        app:layout_constraintStart_toStartOf="@+id/title_input"
        app:layout_constraintTop_toBottomOf="@id/title_input" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColorHint="#6B6969"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/border_box"
        android:hint="@string/create_page_title_hint"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/return_btn" />

    <Button
        android:id="@+id/date_picker"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/white"
        android:text="@string/date_set_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />

    <Button
        android:id="@+id/time_picker"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/white"
        android:text="@string/time_set_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/date_picker"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintTop_toTopOf="@+id/date_picker"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginBottom="41dp"
        android:text="@string/create_page_save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
