<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="3dp"
            android:background="@color/darkGray"
            android:clipToPadding="true"
            android:clipChildren="true">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/start_due_time"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line"
                app:layout_constraintTop_toTopOf="@+id/taskTitle" />

            <TextView
                android:id="@+id/taskDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/start_due_date"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/location_text"
                app:layout_constraintEnd_toEndOf="@+id/taskStartTime"
                app:layout_constraintStart_toStartOf="@+id/taskStartTime" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/location_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/taskTitle"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/time_set_text"
                android:src="@drawable/rounded_background_highlighted"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintStart_toEndOf="@+id/taskTitle"
                app:layout_constraintTop_toTopOf="parent" /> <!-- Replace with your drawable resource -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>