<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="16dp"
        app:layout_constraintWidth_percent="0.995"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkGray"
            android:clipToPadding="true"
            android:clipChildren="true"
            android:paddingTop="5dp"
            android:paddingBottom="12sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/due_time"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line" />

            <TextView
                android:id="@+id/taskDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/due_time"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/taskDueTime"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/taskDueTime"
                app:layout_constraintTop_toTopOf="@+id/location_text"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/location_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/taskTitle"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="1.5dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/rounded_background_highlighted"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintStart_toEndOf="@+id/taskTitle"
                app:layout_constraintTop_toTopOf="parent" /> <!-- Replace with your drawable resource -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>