<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#00000000">



<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="20dp"
    app:layout_constraintWidth_percent="0.995">

    <ImageView
        android:id="@+id/course_img"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_background"
        android:scaleType="centerCrop"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#242424"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/courseCode"
            android:layout_width="213dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="144dp"
            android:layout_height="33dp"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/create_page_save_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/taskTitle" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="144dp"
            android:layout_height="38dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/create_page_save_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/startTime"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/startTime"
            app:layout_constraintTop_toBottomOf="@+id/courseCode"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="181dp"
            android:layout_height="22dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/create_page_save_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/courseCode"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="@+id/courseCode"
            app:layout_constraintTop_toBottomOf="@+id/courseCode"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="1.5dp"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/time_set_text"
            android:src="@drawable/rounded_background_highlighted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/startTime"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintHorizontal_bias="0.296"
            app:layout_constraintStart_toEndOf="@+id/tv_location"
            app:layout_constraintTop_toTopOf="" /> <!-- Replace with your drawable resource -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>


